kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: SERVICENAME-service
  namespace: NAMESPACE
spec:
  ports:
  - name: webport
    port: 80
    targetPort: 80
    nodePort: 30000
  type: NodePort
  selector:
    name: SERVICENAME-deployment
